src/test/deca/context/invalid/homemade/void_parameter_decompile.res
class A extends Object {
	int x(void z) {
	}
}
